--- a/pet-shop-tutorial/src/index.html
+++ b/pet-shop-tutorial/src/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div id="petTemplate" style="display: none;">
+    <div id="petTemplate" style="display: block;">
       <div class="col-sm-6 col-md-4 col-lg-3">
         <div class="panel panel-default panel-pet">
           <div class="panel-heading">
